feat(order-service): CP-12 — seated order flow (MANUAL_SEATED + AUTO_ASSIGN_SEATED)
- Add V3 Flyway migration: order_type, plan_id, section_id columns on orders; new order_seats table
- Add OrderType enum, OrderSeat entity, OrderSeatRepository
- Extend Order entity with 9-arg constructor for seated fields
- Add VenueServiceClient wrapping venue gRPC (reserveHeldSeats, autoAssignAndReserve, releaseSeatReservation, finalizeSeatReservation) with Resilience4j circuit breaker
- Extend GrpcClientConfig with venue channel + stub beans (@Qualifier)
- Add SeatSummary DTO; extend CreateOrderRequest with seatIds/sectionId/planId/attendees, determineOrderType(), validate()
- Extend OrderResponse with orderType, planId, seats
- Extend OrderCreated/Cancelled/Completed events with seatIds field
- Add SeatedOrderTransactionService (transactional boundary for seated path; same AOP fix pattern as GA)
- Add OrderService.createSeatedOrder() for both sub-flows; cancel/expire/complete carry seatIds in outbox events; markComplete calls finalizeSeatReservation best-effort
- Add POST /api/orders/seated endpoint to OrderController
- Add venue gRPC config and venueService circuit breaker to application.yml
- Add 4 unit tests for seated flows (manual happy path, unavailable seats conflict, compensation on TX failure, auto-assign happy path); 20/20 tests pass